--- a/src/components/style/Panel.css
+++ b/src/components/style/Panel.css
@@ -8,7 +8,10 @@
   border: 1px solid #bbb;
   cursor: pointer;
   font-weight: normal;
-  transition: background-color 0.3s ease, border 0.3s ease, box-shadow 0.3s ease;
+  transition:
+    background-color 0.3s ease,
+    border 0.3s ease,
+    box-shadow 0.3s ease;
   background-color: #ffffff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
