--- a/src/components/style/ResetModal.css
+++ b/src/components/style/ResetModal.css
@@ -1,50 +1,52 @@
 .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(0,0,0,0.7);
-    z-index: 1000;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
+}
 
-  .modal-content {
-    background-color: #222;
-    color: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 255, 0, 0.3);
-    animation: fadeIn 0.3s ease-in-out;
-  }
+.modal-content {
+  background-color: #222;
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 255, 0, 0.3);
+  animation: fadeIn 0.3s ease-in-out;
+}
 
-  .modal-buttons {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-  }
+.modal-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
 
-  .button {
-    padding: 10px 20px;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: box-shadow 0.3s, transform 0.3s;
-  }
+.button {
+  padding: 10px 20px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition:
+    box-shadow 0.3s,
+    transform 0.3s;
+}
 
-  .button.confirm {
-    background-color: #f44336;
-  }
+.button.confirm {
+  background-color: #f44336;
+}
 
-  .button.cancel {
-    background-color: #9e9e9e;
-  }
+.button.cancel {
+  background-color: #9e9e9e;
+}
 
-  .button:hover {
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.5);
-    transform: translateY(-2px);
-  }
+.button:hover {
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.5);
+  transform: translateY(-2px);
+}
